--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "recharts": "^3.6.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
-    "jspdf": "2.5.1"
+    "jspdf": "2.5.1",
+    "xlsx": "0.18.5"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
